--- a/ejercicio.html
+++ b/ejercicio.html
@@ -3,24 +3,48 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Examen</title>
+    <title>Ejercicio 1 figuras</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./ejercicio.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <div class="contenedor">
+    <!--menu-->
+    <section class="contenedor">
+        <div>
+            <img src="./img/html5.png">
+        </div>
         <div class="boton">
             <button type="submit"><b>Enviar 1</b></button>
             <button type="submit"><b>Enviar 2</b></button>
             <button type="submit"><b>Enviar 3</b></button>
         </div>
+    </section>
     </div>
+    <!--figuras-->
     <div class="op">
-        <div class="circulo"></div>
-        <div class="cuadrado"></div>
-        <div class="cuadro-tricolor"></div>
-        <div class="pacman-tricolor"></div>
+        <article>
+            <div class="cuadro-tricolor"></div>
+        </article>
+        <article>
+            <div class="circulo"></div>
+        </article>
+        <article>
+            <div class="triangulo"></div>
+        </article>
+        <article>
+            <div class="ovalo"></div>
+        </article>
+        <article>
+            <div class="rombo"></div>
+        </article>
+        <article>
+            <div class="pacman-tricolor"></div>
+        </article>
     </div>
+    <!--footer-->
+    <footer>
+
+    </footer>
 </body>
 </html>
